@@ -3,7 +3,7 @@ package net.loveruby.cflat.asm;
 public interface Literal extends Comparable<Literal> {
     public String toSource();
     public String toSource(SymbolTable table);
-    public void collectStatistics(AsmStatistics stats);
+    public void collectStatistics(Statistics stats);
     public boolean isZero();
     public Literal plus(long diff);
     public int cmp(IntegerLiteral i);
