@@ -1,3 +1,10 @@
+Tue May 26 13:23:56 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/asm: refactoring: rename class: AsmStatistics
+	  -> Statistics.
+
+	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: follow it.
+
 Tue May 26 13:18:52 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/asm: refactoring: rename class: AsmOperand ->
